# EllieGPT

./: README.md
Ellie-GPT/: README.md  main.py  pyproject.toml
